--- a/package.json
+++ b/package.json
@@ -35,14 +35,17 @@
     "body-parser": "^1.18.3",
     "bootstrap": "^4.1.3",
     "codelyzer": "~4.2.1",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
+    "jsonwebtoken": "^8.4.0",
     "karma": "~1.7.1",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.0",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "nodemon": "^1.18.6",
     "protractor": "~5.3.0",
     "sqlite3": "^4.0.4",
     "ts-node": "~5.0.1",
